--- a/src/main/resources/com/example/demo/first-form.fxml
+++ b/src/main/resources/com/example/demo/first-form.fxml
@@ -18,7 +18,7 @@
    <children>
       <Pane layoutX="226.0" layoutY="78.0" opacity="0.7" prefHeight="453.0" prefWidth="516.0" style="-fx-background-color: #F4F6FB;">
          <children>
-            <Button fx:id="Autorisation" alignment="CENTER" layoutX="150.0" layoutY="227.0" mnemonicParsing="false" onMouseClicked="#autorisation" prefHeight="49.0" prefWidth="217.0" style="-fx-background-color: #0d3436;" text="Авторизация" textFill="WHITE">
+            <Button fx:id="Autorisation" alignment="CENTER" layoutX="150.0" layoutY="227.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="217.0" style="-fx-background-color: #0d3436;" text="Авторизация" textFill="WHITE">
                <font>
                   <Font name="Ebrima Bold" size="19.0" />
                </font>
@@ -26,7 +26,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="Registration" alignment="CENTER" layoutX="150.0" layoutY="330.0" mnemonicParsing="false" onMouseClicked="#registration" prefHeight="49.0" prefWidth="217.0" style="-fx-background-color: #0d3436;" text="Регистрация" textFill="WHITE">
+            <Button fx:id="Registration" alignment="CENTER" layoutX="150.0" layoutY="330.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="217.0" style="-fx-background-color: #0d3436;" text="Регистрация" textFill="WHITE">
                <font>
                   <Font name="Ebrima Bold" size="19.0" />
                </font>
@@ -34,7 +34,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Label fx:id="title" alignment="CENTER" layoutX="108.0" layoutY="42.0" onMouseClicked="#autorisation" prefHeight="97.0" prefWidth="301.0" text="Парфаж">
+            <Label fx:id="title" alignment="CENTER" layoutX="108.0" layoutY="42.0" prefHeight="97.0" prefWidth="301.0" text="Парфаж">
                <font>
                   <Font name="Corbel Bold" size="60.0" />
                </font>
