--- a/src/main/resources/com/example/demo/registration-form.fxml
+++ b/src/main/resources/com/example/demo/registration-form.fxml
@@ -11,16 +11,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="window" prefHeight="609.0" prefWidth="968.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.RegistrationFormController">
+<AnchorPane fx:id="window" prefHeight="609.0" prefWidth="968.0" stylesheets="@scratch.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.RegistrationFormController">
    <children>
-      <Pane layoutX="226.0" layoutY="52.0" opacity="0.7" prefHeight="506.0" prefWidth="516.0" style="-fx-background-color: #F4F6FB;">
+      <Pane layoutX="226.0" layoutY="52.0" opacity="0.7" prefHeight="483.0" prefWidth="516.0" style="-fx-background-color: #F4F6FB;">
          <children>
-            <Label fx:id="title" layoutX="42.0" layoutY="26.0" prefHeight="88.0" prefWidth="432.0" text="Регистрация">
+            <Label fx:id="title" layoutX="39.0" layoutY="26.0" prefHeight="88.0" prefWidth="438.0" text="Регистрация">
                <font>
                   <Font size="60.0" />
                </font>
             </Label>
-            <VBox alignment="CENTER" layoutX="114.0" layoutY="105.0" prefHeight="264.0" prefWidth="288.0">
+            <VBox alignment="CENTER" layoutX="114.0" layoutY="114.0" prefHeight="327.0" prefWidth="288.0">
                <children>
                   <TextField fx:id="logInReg" promptText="Логин:">
                      <VBox.margin>
@@ -62,5 +62,6 @@
             </VBox>
          </children>
       </Pane>
+      <Button fx:id="rewindButton" layoutX="439.0" layoutY="550.0" mnemonicParsing="false" text="Назад" />
    </children>
 </AnchorPane>
