--- a/src/main/resources/com/example/demo/registration-form.fxml
+++ b/src/main/resources/com/example/demo/registration-form.fxml
@@ -15,12 +15,12 @@
    <children>
       <Pane layoutX="226.0" layoutY="52.0" opacity="0.7" prefHeight="483.0" prefWidth="516.0" style="-fx-background-color: #F4F6FB;">
          <children>
-            <Label fx:id="title" layoutX="39.0" layoutY="26.0" prefHeight="88.0" prefWidth="438.0" text="Регистрация">
+            <Label fx:id="title" layoutX="72.0" layoutY="55.0" prefHeight="88.0" prefWidth="373.0" text="Регистрация">
                <font>
                   <Font size="60.0" />
                </font>
             </Label>
-            <VBox alignment="CENTER" layoutX="114.0" layoutY="114.0" prefHeight="327.0" prefWidth="288.0">
+            <VBox alignment="CENTER" layoutX="114.0" layoutY="99.0" prefHeight="327.0" prefWidth="288.0">
                <children>
                   <TextField fx:id="logInReg" promptText="Логин:">
                      <VBox.margin>
@@ -46,7 +46,7 @@
                         <Font size="19.0" />
                      </font>
                   </PasswordField>
-                  <Button fx:id="registration" mnemonicParsing="false" style="-fx-background-color: #0D3436;" text="Войти" textFill="#f4f6fb">
+                  <Button fx:id="registration" alignment="BOTTOM_CENTER" mnemonicParsing="false" style="-fx-background-color: #0D3436;" text="Войти" textFill="#f4f6fb">
                      <cursor>
                         <Cursor fx:constant="HAND" />
 
@@ -62,6 +62,6 @@
             </VBox>
          </children>
       </Pane>
-      <Button fx:id="rewindButton" layoutX="439.0" layoutY="550.0" mnemonicParsing="false" text="Назад" />
+      <Button fx:id="rewindButton" layoutX="443.0" layoutY="555.0" mnemonicParsing="false" text="Назад" />
    </children>
 </AnchorPane>
