--- a/src/main/resources/main-menu-form.fxml
+++ b/src/main/resources/main-menu-form.fxml
@@ -4,9 +4,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -15,9 +13,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.web.WebView?>
 
-<AnchorPane fx:id="window" prefHeight="700.0" prefWidth="1280.0" stylesheets="@scratch.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.MainMenuController">
+<AnchorPane fx:id="window" prefHeight="694.0" prefWidth="1211.0" stylesheets="@scratch.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.MainMenuController">
    <children>
       <HBox fx:id="menuBox" alignment="CENTER" prefHeight="71.0" prefWidth="1386.0">
          <children>
@@ -25,11 +22,6 @@
                <HBox.margin>
                   <Insets />
                </HBox.margin>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <Button mnemonicParsing="false" onMouseClicked="#chatsClick" prefHeight="42.0" prefWidth="170.0" text="Чаты">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -51,24 +43,6 @@
       </HBox>
       <HBox layoutY="50.0" prefHeight="650.0" prefWidth="1280.0">
          <children>
-            <VBox fx:id="chats" managed="false" prefHeight="650.0" prefWidth="1280.0" visible="false">
-               <children>
-                  <Pane prefHeight="650.0" prefWidth="1280.0">
-                     <children>
-                        <TextField layoutX="418.0" layoutY="528.0" prefHeight="42.0" prefWidth="445.0" promptText="Введите вообщение..." />
-                        <ListView fx:id="dialogView" layoutX="466.0" layoutY="29.0" prefHeight="296.0" prefWidth="349.0" />
-                        <Button layoutX="533.0" layoutY="440.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="215.0" text="Присоединиться" />
-                        <TextField layoutX="418.0" layoutY="387.0" prefHeight="42.0" prefWidth="445.0" promptText="Искать чат..." />
-                        <Button layoutX="578.0" layoutY="580.0" mnemonicParsing="false" text="Отправить" />
-                     </children>
-                  </Pane>
-               </children></VBox>
-            <Pane fx:id="tests" prefHeight="47.0" prefWidth="94.0" visible="false">
-               <children>
-                  <WebView fx:id="webview" prefHeight="650.0" prefWidth="1280.0" />
-                  <Button fx:id="update" layoutX="1224.0" layoutY="7.0" mnemonicParsing="false" onMouseClicked="#updateTests" text="↺" />
-               </children>
-            </Pane>
             <VBox fx:id="schedule" prefHeight="650.0" prefWidth="1280.0">
                <children>
                   <Pane prefHeight="650.0" prefWidth="1280.0">
@@ -78,7 +52,8 @@
                         <Label fx:id="month_label" layoutX="146.0" layoutY="-3.0" prefHeight="66.0" prefWidth="251.0" text="Label">
                            <font>
                               <Font size="1.0" />
-                           </font></Label>
+                           </font>
+                        </Label>
                         <TextArea fx:id="noteArea" layoutX="884.0" layoutY="61.0" prefHeight="505.0" prefWidth="336.0" />
                         <GridPane fx:id="calendar" gridLinesVisible="true" layoutX="146.0" layoutY="95.0" prefHeight="532.0" prefWidth="701.0">
                           <rowConstraints>
@@ -143,7 +118,9 @@
                         <Label fx:id="year_label" layoutX="665.0" layoutY="5.0" prefHeight="50.0" prefWidth="182.0" text="Label" />
                      </children>
                   </Pane>
-               </children></VBox>
+               </children>
+            </VBox>
+            <VBox fx:id="tests" prefHeight="650.0" prefWidth="1280.0" style="-fx-background-color: null;" stylesheets="@scratch.css" />
          </children>
       </HBox>
    </children>
